--- a/index.html
+++ b/index.html
@@ -4,14 +4,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="app.css" />
     <title>Pokémon database</title>
   </head>
   <body>
-    <h1>Pokémon database</h1>
-    <details>
-      <summary>Psyduck</summary>
-      <ul id=pokemonlist></ul>
-    </details>
+    <header>
+      <h1>Pokémon Database</h1>
+    </header>
+    <main>
+      <section id="pokemon" class="grid-container"></section>
+      <dialog id="pokemondetails"></dialog>
+    </main>
   </body>
   <script src="script.js"></script>
 </html>
