--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
     </header>
     <main>
       <section id="pokemon" class="grid-container"></section>
-      <dialog id="pokemondetails"></dialog>
+      <dialog id="pokemondetails">
+
+
+        
+      </dialog>
     </main>
   </body>
   <script src="script.js"></script>
