--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <main>
       <section id="pokemon" class="grid-container"></section>
       <dialog id="pokemondetails"></dialog>
+      <footer><h3>By Laurits Schou</h3></footer>
     </main>
   </body>
   <script src="script.js"></script>
